--- a/lab0.ipynb
+++ b/lab0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkY05WDt1XmQDS9AXCB1ll",
+      "authorship_tag": "ABX9TyPfrykZqK2IQGKwJ9y6fv1h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "4eV6Evvvscra"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# Manish Malla\n",
@@ -44,7 +35,7 @@
         "\n",
         "\n",
         "\n",
-        "Welcome to my colab ! Below you'll find my favorite Python function, a list operation, and more.\n"
+        "Welcome to my colab ! Below you'll find my favorite Python function.\n"
       ],
       "metadata": {
         "id": "k1OJCZ9BtWNP"
