--- a/lab0.ipynb
+++ b/lab0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfrykZqK2IQGKwJ9y6fv1h",
+      "authorship_tag": "ABX9TyNbPtktvJYv+Eaoy07X4OOt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,6 +78,53 @@
           "text": [
             "The length of the list is: 5\n",
             "The length of the string is: 13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## My Random List of 10 Numbers\n",
+        "\n",
+        "Here i show a way from which you can ger 10 random numbers."
+      ],
+      "metadata": {
+        "id": "3ZKIOrPqxfP4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "\n",
+        "random_numbers = [random.randint(1, 100) for _ in range(10)]\n",
+        "print(\"Random Numbers:\", random_numbers)\n",
+        "\n",
+        "print(\"Sum:\", sum(random_numbers))\n",
+        "print(\"Minimum:\", min(random_numbers))\n",
+        "print(\"Maximum:\", max(random_numbers))\n",
+        "print(\"Length of the list:\", len(random_numbers))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dGX2xUbOxz0j",
+        "outputId": "036e2873-150f-4e02-a823-5099a33fec37"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Random Numbers: [14, 84, 83, 4, 46, 12, 80, 72, 85, 65]\n",
+            "Sum: 545\n",
+            "Minimum: 4\n",
+            "Maximum: 85\n",
+            "Length of the list: 10\n"
           ]
         }
       ]
