--- a/lab0.ipynb
+++ b/lab0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbPtktvJYv+Eaoy07X4OOt",
+      "authorship_tag": "ABX9TyN4jKkpPpaYTPOL2OEtR6Jd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
       "source": [
         "## My Random List of 10 Numbers\n",
         "\n",
-        "Here i show a way from which you can ger 10 random numbers."
+        "Here i show a way from which you can get 10 random numbers and i have included"
       ],
       "metadata": {
         "id": "3ZKIOrPqxfP4"
@@ -100,31 +100,31 @@
         "\n",
         "\n",
         "random_numbers = [random.randint(1, 100) for _ in range(10)]\n",
-        "print(\"Random Numbers:\", random_numbers)\n",
+        "print(\"Random Numbers are \", random_numbers)\n",
         "\n",
-        "print(\"Sum:\", sum(random_numbers))\n",
-        "print(\"Minimum:\", min(random_numbers))\n",
-        "print(\"Maximum:\", max(random_numbers))\n",
-        "print(\"Length of the list:\", len(random_numbers))\n"
+        "print(\"Sum is :\", sum(random_numbers))\n",
+        "print(\"Minimum is :\", min(random_numbers))\n",
+        "print(\"Maximum is :\", max(random_numbers))\n",
+        "print(\"Length of the list is :\", len(random_numbers))\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dGX2xUbOxz0j",
-        "outputId": "036e2873-150f-4e02-a823-5099a33fec37"
+        "outputId": "5f0166b6-37ed-476a-e258-51b4da7944dd"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Random Numbers: [14, 84, 83, 4, 46, 12, 80, 72, 85, 65]\n",
-            "Sum: 545\n",
-            "Minimum: 4\n",
-            "Maximum: 85\n",
-            "Length of the list: 10\n"
+            "Random Numbers are  [56, 23, 21, 86, 88, 19, 32, 87, 96, 20]\n",
+            "Sum is : 528\n",
+            "Minimum is : 19\n",
+            "Maximum is : 96\n",
+            "Length of the list is : 10\n"
           ]
         }
       ]
