--- a/lab0.ipynb
+++ b/lab0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4jKkpPpaYTPOL2OEtR6Jd",
+      "authorship_tag": "ABX9TyOsxeqJJN9RgIfqtNx7fVju",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "source": [
         "##  My Favorite Python Function: `len()`\n",
         "\n",
-        "The `len()` function is one of my favorites because it's super simple easy  and very useful. It tells us how many items are in a list, how many characters are in a string.Here i show you a example where len function is use."
+        "The `len()` function is one of my favorites because it's super simple easy  and very useful. It tells us how many items are in a list, how many characters are in a string.Here i show you a example where len function is used."
       ],
       "metadata": {
         "id": "ltm8nOSxuktw"
@@ -87,7 +87,7 @@
       "source": [
         "## My Random List of 10 Numbers\n",
         "\n",
-        "Here i show a way from which you can get 10 random numbers and i have included"
+        "Here i show a way from which you can get 10 random numbers and i have included their calculated and printed  basic statistics."
       ],
       "metadata": {
         "id": "3ZKIOrPqxfP4"
